about page build. Todo : <body> fixed overflow:hidden to display scroll

--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  text-align: center;
   background-image: linear-gradient(
     110deg,
     darken($title-color, 4%) 33%,
